# rl_carcassonne

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: ppo_baseline.yaml  ppo_smoke.yaml
docs/: PROJECT_NOTES.md
pycarcassone/: demo.py  pyproject.toml
pycarcassone/dev_tools/: fullfill_cards.ipynb
pycarcassone/pycarcassone/: __init__.py  board.py  deck.py  game.py  graph.py  player.py  utils.py
pycarcassone/pycarcassone/ui/: README.md  __init__.py  server.py  session.py
pycarcassone/pycarcassone/ui/static/: app.js  index.html  styles.css
pycarcassone/tests/: test_board.py  test_game.py  test_graph.py  test_ui_server.py  test_ui_session.py
rl_carcassone/: pyproject.toml
rl_carcassone/env/: env.py
rl_carcassone/env/game/: board.py  card.py  deck.py  game.py  graph.py  player.py
rl_carcassone/env/game/assets/: cards.json  cards_raw.json
rl_carcassone/rl_carcassone/: __init__.py
rl_carcassone/rl_carcassone/algorithm/: __init__.py
rl_carcassone/rl_carcassone/algorithm/ppo/: __init__.py  ppo.py
rl_carcassone/rl_carcassone/data/: __init__.py  episode.py  storage.py
rl_carcassone/rl_carcassone/env/: __init__.py  env.py
rl_carcassone/rl_carcassone/env/spaces/: __init__.py  dynamic_discrete.py  heterogeneous_graph.py
rl_carcassone/rl_carcassone/policy/: __init__.py  assymetric_actor_critic.py  utils.py
rl_carcassone/rl_carcassone/policy/actor/: __init__.py  actor.py  base_actor.py  distribution.py
rl_carcassone/rl_carcassone/policy/critic/: __init__.py  base_critic.py  critic.py
rl_carcassone/rl_carcassone/policy/features_extractor/: __init__.py  graph.py
rl_carcassone/rl_carcassone/utils/: __init__.py  config.py  explained_variance.py  logger.py  play_single_episode.py  rollout_worker_pool.py
rl_carcassone/tests/: test_dynamic_discrete.py  test_env.py  test_episode_storage.py  test_heterogeneous_graph.py  test_policy.py  test_ppo.py  test_rollout_worker_pool.py
scripts/: benchmark_actor_inference.py  play.py  train_ppo.py
tools/: draw_properties.ipynb  fullfill_cards.ipynb
