[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycarcassone"
version = "0.1"
authors = [
  {name = "Konstantin Cherniak", email = "chernyakonstantin@gmail.com"},
]
description = "Python game engine and browser UI for Carcassonne with the Abbot mini-expansion."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">= 3.12"
dependencies = [
  "networkx",
  "numpy",
]

keywords = [
  "carcassonne",
  "carcassone",
  "board-game",
  "game-engine",
  "python",
  "game-ai",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment :: Board Games",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/ChernyakKonstantin/rl_carcassonne"
Repository = "https://github.com/ChernyakKonstantin/rl_carcassonne"
Issues = "https://github.com/ChernyakKonstantin/rl_carcassonne/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycarcassone"]

[tool.setuptools.package-data]
pycarcassone = ["ui/static/*"]
