[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_carcassone"
version = "0.1"
authors = [
  {name = "Konstantin Cherniak", email = "chernyakonstantin@gmail.com"},
]
description = "Gymnasium environment and baseline RL agent for playing Carcassonne."
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">= 3.12"
dependencies = [
  "networkx",
  "opencv-python",
  "numpy",
  "click",
  "gymnasium",
  "scipy",
  "pytest",
]

keywords = [
  "carcassonne",
  "carcassone",
  "reinforcement-learning",
  "rl-environment",
  "gymnasium",
  "board-game-ai",
  "baseline-agent",
  "self-play",
  "graph-neural-networks",
  "dynamic-action-space",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Games/Entertainment :: Board Games",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/ChernyakKonstantin/rl_carcassonne"
Repository = "https://github.com/ChernyakKonstantin/rl_carcassonne"
Issues = "https://github.com/ChernyakKonstantin/rl_carcassonne/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_carcassone", "rl_carcassone.*"]